Fixed Text-Align Left for Content Right Layout

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -57,14 +57,6 @@ span,
     background-color: #1A1818
 }
 
-@media (min-width: 576px) {
-
-    .content-text-left {
-        text-align: left;
-    }
-
-}
-
 .smaller-carousel {
     width: 170px;
     margin: auto;
